--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,13 +8,27 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
+autoloadernamespaces[] = Application
+
+
 [staging : production]
+
 
 [testing : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
+
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
+
+
+[cli:testing]
+phpSettings.assert.bail = 1
+phpSettings.error_reporting = E_ALL
+bootstrap.path = APPLICATION_PATH "/BootstrapCli.php"
+
+bootstrap.class = "BootstrapCli"
+resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers-cli"
